syntax = "proto3";

package se.typedef.grpc;

option java_multiple_files = true;

message GetPostRequest {
    int64 id = 1;
}

message GetPostResponse {
    int64 id = 1;
    string author = 2;
    string text = 3;
}

message PutPostRequest {
    string author = 1;
    string text = 2;
}

message PutPostResponse {
    int64 id = 1;
}

message DeletePostRequest {
    int64 id = 1;
}

message DeletePostResponse {
    int64 id = 1;
}

service BlogPostService {
    rpc getPost(GetPostRequest) returns (GetPostResponse);
    rpc putPost(PutPostRequest) returns (PutPostResponse);
    rpc deletePost(DeletePostRequest) returns (DeletePostResponse);
}